# gnome-engine-opengl-cpp

./: .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json  debug_lsp.sh  example_organization.h  nvim_header_navigation.lua  run.sh  test_lsp.cpp  test_navigation.cpp
.cache/clangd/index/: ECS.h.F5ED97134579AEA1.idx  GnomeEngine.h.6E79E88105167A3C.idx  glad.c.0C50B9F6E9F2822E.idx  glad.c.B6634DCDF6929223.idx  glad.h.ECCB29BDA278713B.idx  glad.h.ED4006A4414EEA7A.idx  khrplatform.h.924268212233128F.idx  main.cpp.035F389597CD8D6D.idx  main.cpp.466245A871074644.idx  stb_image.h.6F5AA36EC96E16AF.idx
engine/assets/: AnimationAsset.h  ColorAsset.h  MaterialAsset.h  MeshAsset.h  TextureAsset.h
engine/collision/: Collision.h
engine/components/: Animation.h  Material.h  Mesh.h  Physics.h  Shader.h  Transform.h
engine/core/: GnomeEngine.h  GnomeTime.cpp  GnomeTime.h  types.h
engine/ecs/: ECS.h
engine/entities/: GLine.h  GRectangle.h
engine/files/: FileHandler.h
engine/input/: InputHandler.h
engine/meshes/: GLineMesh.h  GRectangleMesh.h
engine/renderer/: GPUMaterial.h  GPUMesh.h  GPUShader.h  GPUTexture.h  Renderer.h
engine/renderer/OpenGLRenderer/: OpenGLMaterial.h  OpenGLMesh.h  OpenGLRenderer.h  OpenGLShader.h  OpenGLTexture.h  ShaderLibrary.h
engine/shaders/GLine/: Fragment.h  Vertex.h
engine/shaders/GRectangle/: Fragment.h  Vertex.h
engine/systems/: AnimationSystem.h  CollisionSystem.h  RenderSystem.h
engine/utility/: Utility.h
include/: ECS.h  GRectangle.h  GnomeEngine.cpp  GnomeEngine.h  Material.h  Shader.h  Transform.h  stb_image.h
include/glad/: glad.h
src/: glad.c  main.cpp
